welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:5: error: not found: value getLargeurMonde
    for (j<-0 to getLargeurMonde()-1){
                 ^Diagonal:6: error: not found: value getHauteurMonde
      for(k <- 0 to getHauteurMonde()-1)
                    ^Diagonal:8: error: not found: value getLargeurMonde
      	setPos(cpt%getLargeurMonde(), i)
                   ^