welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
  var cpt=0
  var i=0
  while (cpt <= 48){
    for (j<-0 to getLargeurMonde()-1){
      for(k <- 0 to getHauteurMonde()-1)
      	ecritMessage(cpt)
      	setPos(cpt%getLargeurMonde(), i)
      cpt=cpt+1
      		
    }
  }
}